--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@google/genai": "^1.33.0",
     "react-router-dom": "^7.10.1",
     "lucide-react": "^0.561.0",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "xlsx": "0.18.5",
+    "jspdf": "2.5.1",
+    "jspdf-autotable": "3.5.29"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
