--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^0.2.1",
+    "@google/genai": "*",
     "@supabase/supabase-js": "^2.39.3",
     "better-sqlite3": "^9.4.3",
     "body-parser": "^1.20.2",
