--- a/package.json
+++ b/package.json
@@ -5,28 +5,22 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "server": "node server.cjs",
-    "start:all": "node server.cjs & vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start:all": "vite"
   },
   "dependencies": {
     "@google/genai": "*",
     "@supabase/supabase-js": "^2.39.3",
-    "better-sqlite3": "^9.4.3",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.2",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.5.29",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "uuid": "^9.0.1",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.29"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
